--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && cd app/frontend && npm install && npm run build && cd ../ && rm -rf public && mkdir public && cpx \"frontend/build/**/*\" public",
-    "start": "node server"
+    "start": "node server",
+    "serve": "npm run build && npm run start"
   },
   "author": "Brian Kelly",
   "license": "ISC",
